Fixed: Hide overflow from viewer element
This can happen momentarily when when the viewer is resized.

--- a/source/css/viewer.less
+++ b/source/css/viewer.less
@@ -134,6 +134,7 @@
     background: @viewerBg;
     .frame(@viewerFrame);
     position: relative;
+    overflow: hidden;
     min-height: 100px;
     min-width: 200px;
     height: 700px;
